syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

package MYCG.Core.PersistentQueue.Queue;

message QueueMsg {
    string Id = 1;
    google.protobuf.Timestamp Date = 2;
    string MessageType = 3;
    google.protobuf.Any Payload = 4;
    string ParentMessageId = 5;
    string RootMessageId = 6;
    google.protobuf.Timestamp RootMessageDate = 7;
    string RequestId = 8;
}
